--- a/index-kr.html
+++ b/index-kr.html
@@ -611,7 +611,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="team-info">
           <a href="https://www.linkedin.com/in/chermaine-ng-921694163/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Chermaine Ng</h3>
-          <p>Content Marketing Executive.</p>
+          <p>Content Marketing Executive</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
@@ -623,7 +623,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="team-info">
           <a href="https://www.linkedin.com/in/phuong-anh-nguyen-657757a4/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Irene Nguyen</h3>
-          <p>Investment Analyst.</p>
+          <p>Investment Analyst</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
@@ -635,7 +635,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="team-info">
           <a href="https://www.linkedin.com/in/hien-nguyen-2b431b156/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Hien Nguyen</h3>
-          <p>Designer.</p>
+          <p>Designer</p>
         </div>
       </div>
     </div>
@@ -984,9 +984,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h2>Patrick Tan</h2>
   <h3>General Counsel</h3>
   <br><br>
-  <p>Patrick is a lawyer and was called to the Singapore Bar in 2005. Specializing in blockchain technology law, he was previously with one of Singapore’s top blockchain technology law firms.</p>
-  <br><br>
-  <p>He analyzes and manages legal risks related to cryptocurrency trading and his writing is regularly featured in leading publications.</p>
+  <p>Patrick is a lawyer and was called to the Singapore Bar in 2005. Specializing in blockchain technology law, he was previously with one of Singapore’s top blockchain technology law firms.He analyzes and manages legal risks related to cryptocurrency trading and his writing is regularly featured in leading publications.</p>
 </div>
 <div id="jeremy" class="white-popup big-popup mfp-hide sans">
   <h2>Jeremy Khoo</h2>
@@ -1106,15 +1104,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h2>Irene Nguyen</h2>
   <h3>Investment Analyst</h3>
   <br><br>
-  <p>Having begun her career by working as an accountant and administrator for Korean companies, Irene has firm knowledge in Corporate Finance and Human Relations. Irene graduated from the University of Nottingham with a Master's degree in Finance and Investment</p>
-  <p>Prior to this, she had gained a Bachelor's degree in International Business from Vietnam National University. Irene has strong financial analysing skills with the ability to do some coding in Matlab and Python. Her interest areas of expertise include Venture Capital Investment, Corporate Finance and Derivatives Investment.</p>
+  <p>Having begun her career by working as an accountant and administrator for Korean companies, Irene has firm knowledge in Corporate Finance and Human Relations. Irene graduated from the University of Nottingham with a Master's degree in Finance and Investment.Prior to this, she had gained a Bachelor's degree in International Business from Vietnam National University. Irene has strong financial analysing skills with the ability to do some coding in Matlab and Python. Her interest areas of expertise include Venture Capital Investment, Corporate Finance and Derivatives Investment.</p>
 </div>
 <div id="hien" class="white-popup big-popup mfp-hide sans">
   <h2>Hien Nguyen</h2>
   <h3>Designer</h3>
   <br><br>
-  <p>Hien studied for 4 years specialising in Information Technology in NEU of Vietnam and eventually attained a Bachelor of MIS. After she graduated, she began working as a UI/ UX Designer at Vinsofts JSC and was promoted to  Leader of the company's Design Team after 1 year due to excellent performance in her role</p>
-  <p>She worked on many projects which involved building multiple websites and even mobile apps. With a keen eye for detail, a strong aesthetic sense and in depth understanding of UI/UX design, Hien is no stranger to process of creating the best designs possible to suit any needs.</p>
+  <p>Hien studied for 4 years specialising in Information Technology in NEU of Vietnam and eventually attained a Bachelor of MIS. After she graduated, she began working as a UI/ UX Designer at Vinsofts JSC and was promoted to  Leader of the company's Design Team after 1 year due to excellent performance in her role.She worked on many projects which involved building multiple websites and even mobile apps. With a keen eye for detail, a strong aesthetic sense and in depth understanding of UI/UX design, Hien is no stranger to process of creating the best designs possible to suit any needs.</p>
 </div>
 <!---------- Team popup end ------------>
 
