--- a/index-zh.html
+++ b/index-zh.html
@@ -611,7 +611,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="team-info">
           <a href="https://www.linkedin.com/in/chermaine-ng-921694163/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Chermaine Ng</h3>
-          <p>Content Marketing Executive.</p>
+          <p>Content Marketing Executive</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
@@ -999,9 +999,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h2>Patrick Tan</h2>
   <h3>General Counsel</h3>
   <br><br>
-  <p>Patrick is a lawyer and was called to the Singapore Bar in 2005. Specializing in blockchain technology law, he was previously with one of Singapore’s top blockchain technology law firms.</p>
-  <br><br>
-  <p>He analyzes and manages legal risks related to cryptocurrency trading and his writing is regularly featured in leading publications.</p>
+  <p>Patrick is a lawyer and was called to the Singapore Bar in 2005. Specializing in blockchain technology law, he was previously with one of Singapore’s top blockchain technology law firms.He analyzes and manages legal risks related to cryptocurrency trading and his writing is regularly featured in leading publications.</p>
 </div>
 <div id="jeremy" class="white-popup big-popup mfp-hide sans">
   <h2>Jeremy Khoo</h2>
@@ -1111,7 +1109,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <br><br>
   <p>With 5 years of coding experience, Viet is a code lover experienced in android-based application and back-end web server. Previous expertise accumulated from game porting and system development. Viet also graduated from the School of University of Engineering and Technology (VNU-UET).</p>
 </div>
-
+<div id="chermaine" class="white-popup big-popup mfp-hide sans">
+  <h2>Chermaine Ng</h2>
+  <h3>Content Marketing Executive</h3>
+  <br><br>
+  <p>Chermaine graduated with honours from NUS in Political Science and a keen interest in gender politics. A strategic creative with operational skills, she began her content-creating journey in publishing at Mediacorp Pte Ltd with a leading lifestyle content platform and magazine. Moving into the world of branding, marketing and operations of a start-up e-commerce platform after, Chermaine has experience also in visual story-telling across multiple platforms.</p>
+</div>
 <div id="irene" class="white-popup big-popup mfp-hide sans">
   <h2>Irene Nguyen</h2>
   <h3>Investment Analyst</h3>
