--- a/index-kr.html
+++ b/index-kr.html
@@ -470,6 +470,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>매니징 파트너</p>
         </div>
       </div>
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#brandon" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-brandon.jpg" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/brandon-sangsoo-lee-74a91416/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Brandon Lee</h3>
+          <p>Country Manager (Korea)</p>
+        </div>
+      </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
         <a href="#nizam" class="open-popup-link">
           <div class="circle-team">
@@ -998,7 +1010,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <br>
   <p>Jeremy는 싱가포르 난양공대에서 기계공학 학사 학위를 취득했으며 싱가포르 공군에서 장교로 근무하던 중 명예 훈장을 받았습니다.</p>
 </div>
-
+<div id="brandon" class="white-popup big-popup mfp-hide sans">
+  <h2>Brandon Lee</h2>
+  <h3>Country Manager (Korea)</h3>
+  <br><br>
+  <p>With many years of experience as a data scientist across industries and corporations such as Samsung and Siemens, Brandon excels in optimisation and improvisation of all processes.Prior to starting his own digital analytics company, SmartMind Inc, he was serving as the Vice President / Senior Data Scientist at Mediacorp Pte Ltd, the largest media business in Singapore.A sociable and quick-witted leader, Brandon breaks the stereotypes of a data scientist - channeling casual conversations into observations while combining his expertise to elevate and improve business processes with his findings.</p>
+  <br>
+</div>
 <div id="nizam" class="white-popup big-popup mfp-hide sans">
   <h2>Nizam Ismail</h2>
   <h3>법률 책임자</h3>
