--- a/index.html
+++ b/index.html
@@ -470,6 +470,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>Managing Partner</p>
         </div>
       </div>
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#brandon" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-brandon.jpg" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/brandon-sangsoo-lee-74a91416/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Brandon Lee</h3>
+          <p>Country Manager (Korea)</p>
+        </div>
+      </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
         <a href="#nizam" class="open-popup-link">
           <div class="circle-team">
@@ -999,6 +1011,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>Jeremy co-founded retail blockchain MegaX as well as Crypto-E-Commerce store Megaxstore which is spearheading cryptocurrency mass adoption. He also spends his time advising and building more than 40 exciting blockchain projects such as Consentium, Spiking, Bountie, Viola, Vanig and W Pay. Jeremy is a VeChain ICO partner and has been involved in blockchain development as a speaker, educator and investor.</p>
   <br>
   <p>Jeremy obtained his Bachelor's Degree in Mechanical Engineering from the Nanyang Technological University of Singapore and also received the prestigious Sword of Honour during Officer Commissioning from the Republic of Singapore Air Force.</p>
+</div>
+
+<div id="brandon" class="white-popup big-popup mfp-hide sans">
+  <h2>Brandon Lee</h2>
+  <h3>Country Manager (Korea)</h3>
+  <br><br>
+  <p>With many years of experience as a data scientist across industries and corporations such as Samsung and Siemens, Brandon excels in optimisation and improvisation of all processes.Prior to starting his own digital analytics company, SmartMind Inc, he was serving as the Vice President / Senior Data Scientist at Mediacorp Pte Ltd, the largest media business in Singapore.A sociable and quick-witted leader, Brandon breaks the stereotypes of a data scientist - channeling casual conversations into observations while combining his expertise to elevate and improve business processes with his findings.</p>
+  <br>
 </div>
 
 <div id="nizam" class="white-popup big-popup mfp-hide sans">
