--- a/index-zh.html
+++ b/index-zh.html
@@ -470,6 +470,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>管理伙伴</p>
         </div>
       </div>
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#brandon" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-brandon.jpg" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/brandon-sangsoo-lee-74a91416/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Brandon Lee</h3>
+          <p>Country Manager (Korea)</p>
+        </div>
+      </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
         <a href="#nizam" class="open-popup-link">
           <div class="circle-team">
@@ -1013,7 +1025,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <br>
   <p>Jeremy在新加坡南洋理工大学获得机械工程学士学位，并在新加坡共和国空军军官调试期间荣获著名的荣誉之剑。</p>
 </div>
-
+<div id="brandon" class="white-popup big-popup mfp-hide sans">
+  <h2>Brandon Lee</h2>
+  <h3>Country Manager (Korea)</h3>
+  <br><br>
+  <p>With many years of experience as a data scientist across industries and corporations such as Samsung and Siemens, Brandon excels in optimisation and improvisation of all processes.Prior to starting his own digital analytics company, SmartMind Inc, he was serving as the Vice President / Senior Data Scientist at Mediacorp Pte Ltd, the largest media business in Singapore.A sociable and quick-witted leader, Brandon breaks the stereotypes of a data scientist - channeling casual conversations into observations while combining his expertise to elevate and improve business processes with his findings.</p>
+  <br>
+</div>
 <div id="nizam" class="white-popup big-popup mfp-hide sans">
   <h2>Nizam Ismail</h2>
   <h3>法律顾问</h3>
