--- a/index-zh.html
+++ b/index-zh.html
@@ -268,19 +268,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-redcab.jpg" alt=""></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-spiking.jpg" alt=""></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-tillbilly.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-urunit.jpg" alt=""></div>
+      <!-- <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-urunit.jpg" alt=""></div> -->
       <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-vanig.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-viola.jpg" alt=""></div>
     </div>
     <div class="row wow fadeInUp">
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-viola.jpg" alt=""></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-xrt.jpg" alt=""></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-gofind.jpg" alt=""></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-getchange.jpg" alt=""></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-getdoit.jpg" alt=""></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-mapcoin.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-greenlink.jpg" alt=""></div>
     </div>
     <div class="row wow fadeInUp">
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-greenlink.jpg" alt=""></div>
+      
     </div>
   </div>
 </section>
