--- a/index.html
+++ b/index.html
@@ -271,12 +271,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://ico.opu.ai/" target="_blank"><img src="img/advised-opu.jpg" alt=""></a></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://redcab.io/" target="_blank"><img src="img/advised-redcab.jpg" alt=""></a></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://ico.tillbilly.com/" target="_blank"><img src="img/advised-tillbilly.jpg" alt=""></a></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://urunit.io/" target="_blank"><img src="img/advised-urunit.jpg" alt=""></a></div>
+      <!-- <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://urunit.io/" target="_blank"><img src="img/advised-urunit.jpg" alt=""></a></div> -->
       <div class="col-lg-2 col-md-4 col-4 v-pad"><a href=https://vanig.io/"" target="_blank"><img src="img/advised-vanig.jpg" alt=""></a></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://www.highvibe.network/" target="_blank"><img src="img/advised-highvibe.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://centareum.io/" target="_blank"><img src="img/advised-centareum.jpg" alt=""></div>
     </div>
     <div class="row wow fadeInUp">
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://centareum.io/" target="_blank"><img src="img/advised-centareum.jpg" alt=""></div>
+      
       <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://gemstra.com/" target="_blank"><img src="img/advised-gemstra.jpg" alt=""></a></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://www.xrtfoundation.org/" target="_blank"><img src="img/advised-xrt.jpg" alt=""></a></div>
       <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://www.gofindxr.com/" target="_blank"><img src="img/advised-gofind.jpg" alt=""></a></div>
