--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="team-info">
           <a href="https://www.linkedin.com/in/jeremy-khoo/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Jeremy Khoo</h3>
-          <p>Managing Partner</p>
+          <p>Advisor</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
