--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="dropdown">
           <i class="fa fa-globe" style="font-size:14px;"></i> &nbsp;EN &nbsp;<i class="fa fa-chevron-down chevron-pos"></i>
           <div class="dropdown-content">
-            <p><a href="index-zh.html">Chinese</a></p>
-            <p><a href="index-kr.html">Korean</a></p>
+            <p><a href="index-zh.html">中文</a></p>
+            <p><a href="index-kr.html">한국어</a></p>
           </div>
         </div>
       </li>
