--- a/index-zh.html
+++ b/index-zh.html
@@ -483,6 +483,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>Country Manager (Korea)</p>
         </div>
       </div>
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp">
+        <a href="#nares" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-nares.png" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/nares-laopannarai-b640b2152/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Nares Laopannarai</h3>
+          <p>General Manager (Thailand)</p>
+        </div>
+      </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.9s">
         <a href="#hal" class="open-popup-link">
             <div class="circle-team">
