--- a/index-kr.html
+++ b/index-kr.html
@@ -1019,6 +1019,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>With many years of experience as a data scientist across industries and corporations such as Samsung and Siemens, Brandon excels in optimisation and improvisation of all processes.Prior to starting his own digital analytics company, SmartMind Inc, he was serving as the Vice President / Senior Data Scientist at Mediacorp Pte Ltd, the largest media business in Singapore.A sociable and quick-witted leader, Brandon breaks the stereotypes of a data scientist - channeling casual conversations into observations while combining his expertise to elevate and improve business processes with his findings.</p>
   <br>
 </div>
+<div id="nares" class="white-popup big-popup mfp-hide sans">
+  <h2>Nares Laopannarai</h2>
+  <h3>General Manager (Thailand) </h3>
+  <br><br>
+  <p></p>
+  <br>
+</div>
 <div id="nizam" class="white-popup big-popup mfp-hide sans">
   <h2>Nizam Ismail</h2>
   <h3>법률 책임자</h3>
