--- a/index.html
+++ b/index.html
@@ -988,25 +988,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <br><br>
   <p>Patrick is a lawyer and was called to the Singapore Bar in 2005. Specializing in blockchain technology law, he was previously with one of Singapore’s top blockchain technology law firms.He analyzes and manages legal risks related to cryptocurrency trading and his writing is regularly featured in leading publications.</p>
 </div>
-
-<div id="jeremy" class="white-popup big-popup mfp-hide sans">
-  <h2>Jeremy Khoo</h2>
-  <h3>Managing Partner</h3>
-  <br><br>
-  <p>Jeremy Khoo is an international business operator, founder and blockchain entrepreneur who has successfully exited 3 venture funded companies. He is currently VP of MC Payment and Group CEO of iFashion - a leading regional retail enabler and conglomerate. Under his leadership, iFashion and it's subsidiaries have raised multiple investment rounds from venture capitalists up to Series B. iFashion was acquired by MC Payment for $23 million and Jeremy will be co-leading the combined push for a public listing on the SGX in 2018.</p>
-  <br>
-  <p>Jeremy is a Partner and Principal Consultant in Novum Capital and Enblockr, which has accelerated and invested in many high profile companies that went on to sell more than USD100M in tokens so far. Jeremy is also Managing Partner in CRC Capital, which invests into early stage blockchain innovation.</p>
-  <br>
-  <p>Jeremy co-founded retail blockchain MegaX as well as Crypto-E-Commerce store Megaxstore which is spearheading cryptocurrency mass adoption. He also spends his time advising and building more than 40 exciting blockchain projects such as Consentium, Spiking, Bountie, Viola, Vanig and W Pay. Jeremy is a VeChain ICO partner and has been involved in blockchain development as a speaker, educator and investor.</p>
-  <br>
-  <p>Jeremy obtained his Bachelor's Degree in Mechanical Engineering from the Nanyang Technological University of Singapore and also received the prestigious Sword of Honour during Officer Commissioning from the Republic of Singapore Air Force.</p>
-</div>
-
 <div id="brandon" class="white-popup big-popup mfp-hide sans">
   <h2>Brandon Lee</h2>
   <h3>Country Manager (Korea)</h3>
   <br><br>
   <p>With many years of experience as a data scientist across industries and corporations such as Samsung and Siemens, Brandon excels in optimisation and improvisation of all processes.Prior to starting his own digital analytics company, SmartMind Inc, he was serving as the Vice President / Senior Data Scientist at Mediacorp Pte Ltd, the largest media business in Singapore.A sociable and quick-witted leader, Brandon breaks the stereotypes of a data scientist - channeling casual conversations into observations while combining his expertise to elevate and improve business processes with his findings.</p>
+  <br>
+</div>
+<div id="nares" class="white-popup big-popup mfp-hide sans">
+  <h2>Nares Laopannarai</h2>
+  <h3>General Manager (Thailand) </h3>
+  <br><br>
+  <p></p>
   <br>
 </div>
 
