Updated Thailand office

--- a/index.html
+++ b/index.html
@@ -740,6 +740,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
            Singapore 238838
         </p>
         <br><br>
+	<h3>Thailand</h3>
+        <p>Suthi Building, 1624 Petchburi Road,<br>
+	Khwaeng Makkasan, Khwaeng Ratchathewi<br>
+        Bangkok 10400, Thailand
+        </p>
+        <br><br>
         <h3>Malaysia</h3>
         <p>Level 16, 16-01<br>
            No 6 Changkat Semantan<br>
