Update projects list part

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 
 .flexslider .slides img {display: inline-block;}
 
+.white-text {
+  font-size: 10px;
+  color: white;
+  line-height: 14px;
+}
+
 </style>
 
 <!-- Add sidemenu -->
@@ -147,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </ul>
     <ul id="menu">
       <li><a href="#about">About</a></li>
-      <li><a href="#projects">Our Projects</a></li>
+      <li><a href="#projects">Our Accolades</a></li>
       <li><a href="#services">Our Services</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#team">The Novum Edge</a></li>
@@ -157,7 +163,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <nav> 
       <a href="" id="menuToggle" title="show menu"><span class="navClosed"></span></a> 
       <a href="#about" onclick="closeSidebar(this)">About</a>
-      <a href="#projects" onclick="closeSidebar(this)">Our Projects</a>
+      <a href="#projects" onclick="closeSidebar(this)">Our Accolades</a>
       <a href="#services" onclick="closeSidebar(this)">Our Services</a>
       <a href="#news" onclick="closeSidebar(this)">News</a>
       <a href="#team" onclick="closeSidebar(this)">The Novum Edge</a>
@@ -220,33 +226,100 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!------------ Projects start ------------>
 <section id="projects">
   <div class="container">
-    <p class="small-font">Awesome Clients</p>
+    <p class="small-font">Awesome Accolades</p>
     <br>
-    <h2>Our Completed Projects</h2>
+    <h2>Our Accolades</h2>
     <br><br><br>
     <div class="projects-wrapper wow fadeInUp">
+
       <div class="row">
-        <div class="col-md-3 col-sm-3 col-6 v-pad client-logo">
-          <a href="#consentium" class="open-popup-link"><img src="img/client-consentium.png" alt=""></a>
+        <div class="col-6" style="flex-basis: 48%;">
+          <div class="col  justify-content-center"><h3 class="">Our Projects</h3><p>&nbsp</p></div>
+          <div class="row">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+              <a href="#consentium" class="open-popup-link"><img src="img/client-consentium.png" alt=""></a>
+            </div>
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+               <a href="#cloudmoolah" class="open-popup-link"><img src="img/client-cm.png" alt=""></a>
+            </div>
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+              <a href="#wgp" class="open-popup-link"><img src="img/client-wgp.png" alt=""></a>
+            </div>
+          </div>
+
+          <div class="row mt-4">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+              <a href="#solarite" class="open-popup-link"><img src="img/client-solarite.png" alt=""></a>
+            </div>
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+               <a href="#reditus" class="open-popup-link"><img style="width: 50%" src="img/client-reditus.png" alt=""></a>
+            </div>
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+              <a href="#bountie" class="open-popup-link"><img src="img/client-bountie.png" alt=""></a>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+               <a href="#kozjin" class="open-popup-link"><img style="width: 50%" src="img/client-kozjin.png" alt=""></a>
+            </div>
+             <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+               <a href="#wowx" class="open-popup-link"><img style="width: 50%" src="img/client-wowx.png" alt=""></a>
+            </div>
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+               <a href="#race" class="open-popup-link"><img style="width: 50%" src="img/client-race.png" alt=""></a>
+            </div>
+        
+          </div>
+
         </div>
-        <div class="col-md-3 col-sm-3 col-6 v-pad client-logo">
-           <a href="#cloudmoolah" class="open-popup-link"><img src="img/client-cm.png" alt=""></a>
-        </div>
-        <div class="col-md-3 col-sm-3 col-6 v-pad client-logo">
-          <a href="#wgp" class="open-popup-link"><img src="img/client-wgp.png" alt=""></a>
-        </div>
-        <div class="col-md-3 col-sm-3 col-6 v-pad client-logo">
-          <a href="#solarite" class="open-popup-link"><img src="img/client-solarite.png" alt=""></a>
+
+        <div class="col-1" style="background-color: rgb(76, 77, 79); width: 1px; max-width: 0.1%; padding-left: 0px; padding-right: 0px;"></div>
+
+        <div class="col-6" style="flex-basis: 48%;">
+          <div class="col justify-content-center"><h3 class="">Track Records</h3><p class="white-text">As of October 2019</p></div>
+          <div class="row mt-5" >
+            <div class="col-md-6 col-sm-6 col-6 client-logo">
+              <a href="#consentium" class="">
+                <h3>US$200M+</h3>
+                <p class="white-text mt-1">Raised for 17 ICO projects since 2017</p>
+              </a>
+            </div>
+            <div class="col-md-6 col-sm-6 col-6 client-logo">
+               <a href="#cloudmoolah" class=""><h3>54,682</h3>
+                <p class="white-text mt-1">Token holders</p>
+              </a>
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col-md-6 col-sm-6 col-6 client-logo">
+              <a href="#wgp" class=""><h3>US$689M+</h3>
+                <p class="white-text mt-1">Total market cap</p>
+              </a>
+            </div>
+            <div class="col-md-6 col-sm-6 col-6 client-logo">
+              <a href="#solarite" class=""><h3>4.6+ ratings</h3>
+                <p class="white-text mt-1">on average across projects led (ICOBench)</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="row mt-5">
+            <div class="col-md-6 col-sm-6 col-6 client-logo">
+              <a href="#bountie" class=""><h3>58 projects</h3>
+                <p class="white-text mt-1">consulted and led</p>
+              </a>
+            </div>
+            <div class="col-md-6 col-sm-6 col-6 client-logo">
+               <a href="#nexxo" class=""><h3>121.70+ </h3>
+                <p class="white-text mt-1">ICO success score</p>
+              </a>
+            </div>
+          </div>
+
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-3 col-sm-3 col-6 v-pad client-logo">
-          <a href="#bountie" class="open-popup-link"><img src="img/client-bountie.png" alt=""></a>
-        </div>
-        <div class="col-md-3 col-sm-3 col-6 v-pad client-logo">
-           <a href="#nexxo" class="open-popup-link"><img src="img/client-nexxo.png" alt=""></a>
-        </div>
-      </div>
+
     </div>
     <br><br><br>
     <p class="small-font">OUR TEAM MEMBERS HAVE ALSO ADVISED</p>
@@ -908,12 +981,38 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <a href="https://bountie.io/" target="_blank" class="btn">Learn More</a>
 </div>
 
-<div id="nexxo" class="white-popup projects-popup mfp-hide sans">
-  <h3>NEXXO</h3>
+<div id="reditus" class="white-popup projects-popup mfp-hide sans">
+  <h3>REDITUS</h3>
   <br><br>
-  <p>NEXXO is the world's first global blockchain-powered small business banking platform. The encompassing global blockchain, NEXXONet, is made up of local private blockchains which are legally compliant. Built on its successful existing business model, NEXXO's token sale will happen in October 2018.</p>
+  <p>REDITUS Project</p>
   <br><br>
-  <a href="https://nexxo.io/" target="_blank" class="btn">Learn More</a>
+  <a href="https://www.reditus.io/" target="_blank" class="btn">Learn More</a>
+</div>
+
+<div id="wowx" class="white-popup projects-popup mfp-hide sans">
+  <h3>WOWX</h3>
+  <br><br>
+  <p>WOWX Project</p>
+  <br><br>
+  <a href="https://www.wowx.io/" target="_blank" class="btn">Learn More</a>
+</div>
+
+
+<div id="kozjin" class="white-popup projects-popup mfp-hide sans">
+  <h3>KOZJIN</h3>
+  <br><br>
+  <p>KOZJIN Project</p>
+  <br><br>
+  <a href="https://www.kozjin.io/" target="_blank" class="btn">Learn More</a>
+</div>
+
+
+<div id="race" class="white-popup projects-popup mfp-hide sans">
+  <h3>RACE</h3>
+  <br><br>
+  <p>RACE Project</p>
+  <br><br>
+  <!-- <a href="https://www.race.io/" target="_blank" class="btn">Learn More</a> -->
 </div>
 <!---------- Projects popup end ------------>
 
