--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!------------ Projects start ------------>
 <section id="projects">
   <div class="container">
-    <p class="small-font">Awesome Accolades</p>
+    <p class="small-font">Numbers you should know</p>
     <br>
     <h2>Our Accolades</h2>
     <br><br><br>
