Updated reditus logo

--- a/index.html
+++ b/index.html
@@ -205,7 +205,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <!------------ Home end ------------>
 
-<!------------ About start ------------>
 <section id="about">
   <div class="container">
     <div class="row">
@@ -252,7 +251,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a href="#solarite" class="open-popup-link"><img src="img/client-solarite.png" alt=""></a>
             </div>
             <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
-               <a href="#reditus" class="open-popup-link"><img style="width: 50%" src="img/client-reditus.png" alt=""></a>
+               <a href="#reditus" class="open-popup-link"><img style="width: 50%" src="img/client-reditus1.png" alt=""></a>
             </div>
             <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
               <a href="#bountie" class="open-popup-link"><img src="img/client-bountie.png" alt=""></a>
