Update Project popup description

--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="reditus" class="white-popup projects-popup mfp-hide sans">
   <h3>REDITUS</h3>
   <br><br>
-  <p>REDITUS Project</p>
+  <p>Reditus is an end-to-end blockchain platform for facilitation of tokenised bonds transfers and liquidation.</p>
   <br><br>
   <a href="https://www.reditus.io/" target="_blank" class="btn">Learn More</a>
 </div>
@@ -991,7 +991,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="wowx" class="white-popup projects-popup mfp-hide sans">
   <h3>WOWX</h3>
   <br><br>
-  <p>WOWX Project</p>
+  <p>WOWX is a crypto-to-crypto exchange which prioritises traders with its key features and benefits.</p>
   <br><br>
   <a href="https://www.wowx.io/" target="_blank" class="btn">Learn More</a>
 </div>
@@ -1000,7 +1000,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="kozjin" class="white-popup projects-popup mfp-hide sans">
   <h3>KOZJIN</h3>
   <br><br>
-  <p>KOZJIN Project</p>
+  <p>Kozjin is a cryptocurrency that redefines digital banking and payment with its all-in-one platform and ecosystem.</p>
   <br><br>
   <a href="https://www.kozjin.io/" target="_blank" class="btn">Learn More</a>
 </div>
@@ -1009,7 +1009,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="race" class="white-popup projects-popup mfp-hide sans">
   <h3>RACE</h3>
   <br><br>
-  <p>RACE Project</p>
+  <p>Bringing the real estate community together, RACE aims to provide a cohesive ecosystem for real estate stakeholders.</p>
   <br><br>
   <!-- <a href="https://www.race.io/" target="_blank" class="btn">Learn More</a> -->
 </div>
