Removed links on accolades

--- a/index.html
+++ b/index.html
@@ -279,40 +279,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col justify-content-center"><h3 class="">Track Records</h3><p class="white-text">As of October 2019</p></div>
           <div class="row mt-5" >
             <div class="col-md-6 col-sm-6 col-6 client-logo">
-              <a href="#consentium" class="">
                 <h3>US$200M+</h3>
                 <p class="white-text mt-1">Raised for 17 ICO projects since 2017</p>
-              </a>
             </div>
             <div class="col-md-6 col-sm-6 col-6 client-logo">
-               <a href="#cloudmoolah" class=""><h3>54,682</h3>
+		<h3>54,682</h3>
                 <p class="white-text mt-1">Token holders</p>
-              </a>
             </div>
           </div>
           <div class="row mt-5">
             <div class="col-md-6 col-sm-6 col-6 client-logo">
-              <a href="#wgp" class=""><h3>US$689M+</h3>
+		<h3>US$689M+</h3>
                 <p class="white-text mt-1">Total market cap</p>
-              </a>
             </div>
             <div class="col-md-6 col-sm-6 col-6 client-logo">
-              <a href="#solarite" class=""><h3>4.6+ ratings</h3>
+              <h3>4.6+ ratings</h3>
                 <p class="white-text mt-1">on average across projects led (ICOBench)</p>
-              </a>
             </div>
           </div>
 
           <div class="row mt-5">
             <div class="col-md-6 col-sm-6 col-6 client-logo">
-              <a href="#bountie" class=""><h3>58 projects</h3>
+              <h3>58 projects</h3>
                 <p class="white-text mt-1">consulted and led</p>
-              </a>
             </div>
             <div class="col-md-6 col-sm-6 col-6 client-logo">
-               <a href="#nexxo" class=""><h3>121.70+ </h3>
+               <h3>121.70+ </h3>
                 <p class="white-text mt-1">ICO success score</p>
-              </a>
             </div>
           </div>
 
