Updated Track Record

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-1" style="background-color: rgb(76, 77, 79); width: 1px; max-width: 0.1%; padding-left: 0px; padding-right: 0px;"></div>
 
         <div class="col-6" style="flex-basis: 48%;">
-          <div class="col justify-content-center"><h3 class="">Track Records</h3><p class="white-text">As of October 2019</p></div>
+          <div class="col justify-content-center"><h3 class="">Track Record</h3><p class="white-text">As of October 2019</p></div>
           <div class="row mt-5" >
             <div class="col-md-6 col-sm-6 col-6 client-logo">
                 <h3>US$200M+</h3>
